Added button link to map page try 2

--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <body background="images/pangea.jpg">
         <h1>PANGEA</h1>
     </body>
+    <form>
+        <input class="MyButton" type="button" value="Click Here for Interactive Map" onclick="window.location.href='http://www.hackpangea.github.io/map'" />
+    </form>
 </html>
