--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body background="images/pangea.jpg">
         <h1>PANGEA</h1>
-        <a href='https://hackpangea.github.io/map'><button>Click here for interactive map</button></a>
+        <button type="button" onclick="window.location.href='https://hackpangea.github.io/map'">Click here for interactive map</button>
     </body>
     <form>
         <input class="MyButton" type="button" value="Click Here for Interactive Map" onclick="window.location.href='https://hackpangea.github.io/map'" />
