--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             transform: translate(-50%, -50%);
             -ms-transform: translate(-50%,-50%);
             background-color: #555;
-            color: white;
+            color:white;
             padding: 12px 24px;
             border: none;
             outline: none;
@@ -55,7 +55,7 @@
     <body>
         <div class="bg-h1">PANGEA</div>
         <div class="bg-image img1"></div>
-            <button class="button"></button>Go to map></button>
+            <button class="btn">Go to map></button>
         </div>
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
     </body>
