--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <body>
         <div class="bg-h1">PANGEA</div>
-        <div class="bg-image img1"></div>
+        <div class="bg-image img1">
             <button class="btn">Go to map></button>
         </div>
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
