--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             cursor: pointer;
             font-size: 18px;
             border-radius: 5px;
+            z-index: 2;
         }
     </style>
     </head>
