--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
             margin: 0;
             font-family: "lacuna", 'Calibri', sans-serif;
         }
+        .container {
+            position: relative;
+            width: 50%;
+        }
+        .container img {
+            width: 100%;
+            height: auto;
+        }
         .bg-image {
             height: 100%; 
             background-position: center;
@@ -32,7 +40,7 @@
             text-align: center;
             white-space: nowrap;
         }
-        .bg-image .img1 .btn {
+        .container .btn {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -54,9 +62,10 @@
     </head>
 
     <body>
-        <div class="bg-h1">PANGEA</div>
-        <div class="bg-image img1">
-            <button class="btn">Go to map></button>
+        <div class="container">
+            <div class="bg-h1">PANGEA</div>
+            <img img1=img1>
+            <button class="btn">Go to map</button>
         </div>
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
     </body>
