--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         .container .btn {
             position: absolute;
             top: 50%;
+            margin-top: 120px;
             left: 50%;
             transform: translate(-50%, -50%);
             -ms-transform: translate(-50%,-50%);
@@ -51,7 +52,7 @@
             padding: 12px 24px;
             border: none;
             outline: none;
-            padding: 10px 16px;
+            padding: 18px 24px;
             background-color: #f1f1f1;
             cursor: pointer;
             font-size: 18px;
