--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             margin: 0;
             font-family: "lacuna", 'Calibri', sans-serif;
         }
-        .container {
+        /* .container {
             position: relative;
             width: 50%;
-        }
-        .container img {
+        } */
+        /* .container img {
             width: 100%;
-            height: auto;
-        }
+            height: auto; */
+        /* } */
         .bg-image {
             height: 100%; 
             background-position: center;
@@ -40,7 +40,7 @@
             text-align: center;
             white-space: nowrap;
         }
-        .container .btn {
+        .btn {
             position: absolute;
             top: 50%;
             /* margin-top: 50px; */
@@ -62,11 +62,11 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="bg-h1">PANGEA</div>
-            <img img1=img1>
-            <button class="btn">Go to map</button>
-        </div>
+        <!-- <div class="container"> -->
+        <div class="bg-h1">PANGEA</div>
+        <img img1=img1>
+        <button class="btn">Go to map</button>
+        <!-- </div> -->
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
     </body>
 </html>
