fix background picture

--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
     <body>
         <!-- <div class="container"> -->
         <div class="bg-h1">PANGEA</div>
-        <img img1=img1>
-        <button class="btn">Go to map</button>
+        <div class="button"></div>
+        <div class="bg-image img1"></div>
+        <!-- <div img1=img1> -->
+        <!-- <button class="btn">Go to map</button> -->
         <!-- </div> -->
-        <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
+        <a href='https://hackpangea.github.io/map'><button>Go to map</button></a>
     </body>
 </html>
