fixed img1 method

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             -webkit-filter: brightness(75%); 
             filter: brightness(75%);
         }
-        .img1 { background-image: url("images/pangea.jpg");}
-        .bg-h1 {
+        .container .img1 { background-image: url("images/pangea.jpg");}
+        .container .bg-h1 {
             color: white;
             font-weight: bold;
             font-size: 80px;
@@ -61,13 +61,13 @@
     </style>
     </head>
     <body>
-        <!-- <div class="container"> -->
-        <div class="bg-h1">PANGEA</div>
-        <div class="bg-image img1"></div>
+        <!-- <div class="bg-h1">PANGEA</div>
+        <div class="bg-image img1"></div> -->
         <!-- <div class="button"></div> -->
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
-        <!-- <div img1=img1> -->
         <div class="container">
+            <div class="bh-h1">PANGEA</div>
+            <img img1=img1>
             <button class="btn">Go to map</button>
         </div>
         <!-- </div> -->
