--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             -webkit-filter: brightness(75%); 
             filter: brightness(75%);
         }
-        .container .img1 { background-image: url("images/pangea.jpg");}
+        .container .img1 { 
+            background-image: url("images/pangea.jpg");
+            width: 100%;
+            height: auto;
+        }
         .container .bg-h1 {
             color: white;
             font-weight: bold;
