--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             margin: 0;
             font-family: "lacuna", 'Calibri', sans-serif;
         }
-        .container {
+        /* .container {
             position: relative;
             width: 50%;
         } */
         .container img {
             width: 100%;
             height: auto; 
-        } */
+        } */ */
         .bg-image {
             height: 100%; 
             background-position: center;
@@ -26,10 +26,8 @@
             -webkit-filter: brightness(75%); 
             filter: brightness(75%);
         }
-        .container .img1 { 
-            background-image: url("images/pangea.jpg");
-        }
-        .container .bg-h1 {
+        .img1 { background-image: url("images/pangea.jpg");}
+        .bg-h1 {
             color: white;
             font-weight: bold;
             font-size: 80px;
@@ -42,7 +40,7 @@
             text-align: center;
             white-space: nowrap;
         }
-        .container .btn {
+        .btn {
             position: absolute;
             top: 50%;
             /* margin-top: 50px; */
@@ -63,15 +61,15 @@
     </style>
     </head>
     <body>
-        <!-- <div class="bg-h1">PANGEA</div>
+        <div class="bg-h1">PANGEA</div>
         <div class="bg-image img1"></div> -->
-        <!-- <div class="button"></div> -->
-        <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
-        <div class="container">
+        <div class="button"></div> -->
+        <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
+        <!-- <div class="container">
             <div class="bh-h1">PANGEA</div>
             <img img1=img1>
             <button class="btn">Go to map</button>
-        </div>
+        </div> -->
         <!-- </div> -->
     </body>
 </html>
