--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
             margin: 0;
             font-family: "lacuna", 'Calibri', sans-serif;
         }
-        /* .container {
-            position: relative;
-            width: 50%;
-        } */
-        .container img {
-            width: 100%;
-            height: auto; 
-        } */ */
         .bg-image {
             height: 100%; 
             background-position: center;
@@ -30,9 +22,10 @@
         .bg-h1 {
             color: white;
             font-weight: bold;
-            font-size: 80px;
+            font-size: 130px;
+            border: white;
             position: fixed;
-            top: 15%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 2;
@@ -40,36 +33,31 @@
             text-align: center;
             white-space: nowrap;
         }
-        .btn {
+        .button{
             position: absolute;
-            top: 50%;
-            /* margin-top: 50px; */
             left: 50%;
+            bottom: 70px;
             transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%,-50%);
-            background-color: #555;
+            /* -ms-transform: translate(-50%,-50%); */
+            background-color: translate;
             color:white;
             padding: 18px 24px;
-            border: none;
-            outline: none;
-            background-color: #f1f1f1;
+            border:white;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 50px;
+            color: white;
+            text-decoration: None;
             border-radius: 5px;
             z-index: 2;
         }
+
     </style>
     </head>
-    <body>
+    <body background="images/pangea.jpg">
         <div class="bg-h1">PANGEA</div>
-        <div class="bg-image img1"></div> -->
-        <div class="button"></div> -->
-        <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
-        <!-- <div class="container">
-            <div class="bh-h1">PANGEA</div>
-            <img img1=img1>
-            <button class="btn">Go to map</button>
-        </div> -->
-        <!-- </div> -->
+        <a href="https://hackpangea.github.io/map" class="button">GO TO MAP</a>
+        <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
+        <!-- <div class="bg-image img1"></div>  -->
+
     </body>
 </html>
