--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     </style>
     </head>
     <body background="images/pangea.jpg">
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <div class="elfsight-app-6f117f2e-a2ec-4eb8-b733-a8b025a147da"></div>
         <div class="bg-h1">PANGEA</div>
         <a href="https://hackpangea.github.io/map" class="button">GO TO MAP</a>
         <!-- <a href='https://hackpangea.github.io/map'><button>Go to map</button></a> -->
