--- a/map.html
+++ b/map.html
@@ -171,8 +171,51 @@
         {"Community Centers":[[(42.332249, -71.098244),"Boston Center-Youth and Families","1483 Tremont St, Boston"],[(42.340328, -71.073112),"Blackstone Community Center","50 W Brookline St, Blackstone"], [(42.32551, -71.0593),"Fenway Community Center","1282 Boston St #123, Boston"]],
         "Immigration Services": [[(38.65265, -78.66871),"ACLU","211 Congress St. Boston"],[(51.10955, 0.92175),"Visa Service, Inc","535 Boylston St 5th Floor, Boston"]]
         };
-        var filters = {LatinAmerican: false, EastAsian: false, Restaurants: false, GroceryStores: false, 
-        CulturalCenters: false, ImmigrationResources: false}
+        var East_Asia=
+
+        {"Restaurants": 
+          [[(42.35151, -72.06052), '101 Bakery', '56 Beach St, Boston'], 
+          [(29.428350,-98.513100), 'Bad Bad Bakery', '1 Lakeside Rd, Eastwood'], 
+          [(42.366270, -71.079200), 'Chang Thing Tofu', '37 Rogers St, Cambridge'],
+          [(42.365640, -71.055970), 'Corner Cafe Bakery', '87 Prince St, Boston'],
+          [(42.351760, -71.060980), 'Eldo Cafe House', '36 Harrison Ave, Boston'],
+          [(42.350870, -71.060180), 'Happy Family Seafood', '11 Hudson St, unit A, Boston'],
+          [(42.351100, -71.060040), 'Hing Shing Pastry', '67 Beach St, Boston'],
+          [(42.351520, -71.060580), 'Ho Yuen Bakery', '54 Beach St, Boston'],
+          [(42.301890, -71.054840), 'Mei Sum', '36 Beach St, Boston'],
+          [(38.65265, -78.66871), 'Double Chin Modern Asian Restaurant', '86 Harrison Ave, Boston'],
+          [(42.35119, -7105984), 'New Golden Gate Seafood', '66 Beach St, Boston'],
+          [(42.35138, -71.06069), 'Gourmet Dumpling House', '52 Beach St, Boston'],
+          [(45.4260978987139, -96.410917239285), 'The Q', '660 Washington St, Boston'],
+          [(42.351103, -71.06079), 'Shojo', '9 Tyler St, Boston'],
+          [(42.350837, -71.060634), 'Shabu Zen', '16 Tyler, Boston'],
+          [(42.351491, -71.060128), 'Taiwan Cafe', '34 Oxford St, Boston'],
+          [(42.350931, -71.0602), 'New Jumbo Seafood Restaurant', '5 Hudson St, Boston'],
+          [(42.350979, -71.060478), 'Windsor Dim Sum Cafe', '10 Tyler St, Boston'],
+          [(42.35148, -71.060154), 'Ching King', '60 Beach St, Boston'],
+          [(42.350496, -71.060478), 'Clay Pot Cafe', '74 Kneeland St, Boston'],
+          [(42.347471, -71.062582), 'Chinatown Cafe', '262 Harrison Ave, Boston']],
+
+          
+        "Grocery":
+              [[(42.35242, -71.12533), '88 Supermarket', '1 Brighton Ave, Boston'],
+              [(42.63465, -71.32739), '888 Asian Grocery', '4 Pine St, Lowell'],
+              [(42.35195, -71.06146), 'A Goomart', '15 Harrison Ave, Boston'],
+              [(42.348010, -71.062770), ' Asian Pacific Seafood Trading Co Inc', '216 Harrison Ave, Boston'],
+              [(42.346240, -71.065120), 'C Mart', '50 Herald St, Boston'],
+              [(42.351370, -71.058540), 'C Mart', '109 Lincoln St, Boston'],
+              [(42.499970, -71.194020), 'China Merchandise', '120 Cambridge St, Burlington'],
+              [(42.347490, -71.063020), 'City Fruit Company', '231 Harrison Ave, Boston'],
+              [(42.351480, -71.060210), 'Delight Corner', '34 Oxford St, Boston'],
+              [(42.298880, -71.405630), 'Formoso Asian Marketplace', '271 Worcester Rd, Framingham'],
+              [(42.460340, -70.961270), 'Full Moon Market', '63 Commercial St, Lynn'],
+              [(42.240320, -70.991930), 'Full Moon Market', '63 Commercial St, Lynn'],
+              [(42.257050, -71.808500), 'Mekong Market', '747 Main St, Worcester']],
+
+          "Cultural Centers":
+              [[(42.34871, -7106348), 'Chinese Progressive Association', '28 Ash St, Boston']]};
+              var filters = {LatinAmerican: false, EastAsian: false, Restaurants: false, GroceryStores: false, 
+              CulturalCenters: false, ImmigrationResources: false}
 
     // var any_culture = {};
     //     any_culture =
