maheera be big dum

--- a/map.html
+++ b/map.html
@@ -189,7 +189,7 @@
           [[42.351520, -71.060580], 'Ho Yuen Bakery', '54 Beach St, Boston'],
           [[42.301890, -71.054840], 'Mei Sum', '36 Beach St, Boston'],
           [[38.65265, -78.66871], 'Double Chin Modern Asian Restaurant', '86 Harrison Ave, Boston'],
-          [[42.35119, -7105984], 'New Golden Gate Seafood', '66 Beach St, Boston'],
+          [[42.35119, -71.05984], 'New Golden Gate Seafood', '66 Beach St, Boston'],
           [[42.35138, -71.06069], 'Gourmet Dumpling House', '52 Beach St, Boston'],
           [[45.4260978987139, -96.410917239285], 'The Q', '660 Washington St, Boston'],
           [[42.351103, -71.06079], 'Shojo', '9 Tyler St, Boston'],
@@ -218,7 +218,7 @@
               [[42.257050, -71.808500], 'Mekong Market', '747 Main St, Worcester']],
 
           "CommunityCenters":
-              [[[42.34871, -7106348], 'Chinese Progressive Association', '28 Ash St, Boston']]};
+              [[[42.34871, -71.06348], 'Chinese Progressive Association', '28 Ash St, Boston']]};
               
           var filters = {LatinAmerican: false, EastAsian: false, Restaurants: false, GroceryStores: false, 
               CommunityCenters: false, ImmigrationResources: false}
